@@ -1,5 +1,8 @@
 2003-06-24  Anders Carlsson  <andersca@codefactory.se>
 
+	* help-converters/man/gnome-man2html.c: Use glib versions of
+	string functions. (Fixes #81355, Morten Welinder.)
+
 	* schemas/Makefile.am:
 	Honor for --disable-schemas-install (#106119, Julio Merino.)
 	
